--- a/index.html
+++ b/index.html
@@ -39,9 +39,25 @@
                                 <td>
                                     Pázmány Péter Katolikus Egyetem - Információs Technológiai Kar, Budapest (Magyarország)
                                     <ul class="custom-list">
-                                       <li>matematikai ismeretek</li>
-                                       <li>informatikai ismeretek</li>
-                                       <li>programozasi ismeretek</li>
+                                       <li>matematikai ismeretek
+                                            <ul class="custom-list">
+                                                <li>nulladrendű logikai ismeretek</li>
+                                                <li>gráfelméleti ismeretek</li>
+                                                <li>alapszintű valószínűség számítási ismeretek</li>
+                                            </ul>
+                                       </li>
+                                       <li>informatikai ismeretek
+                                            <ul class="custom-list">
+                                                <li>számítógéphálózati protokollok fontosabb szabályainak, implementációiknak ismerete</li>
+                                            </ul>
+                                       </li>
+                                       <li>programozasi ismeretek
+                                            <ul class="custom-list">
+                                                 <li>különböző adatszerkezetek részletes ismerete</li>
+                                                 <li>algoritmusok tervezése, implementálása</li>
+                                                 <li>statikus és dinamikus weboldalak készítése</li>
+                                            </ul>
+                                       </li>
                                     </ul>
                                 </td>
                             </tr>
@@ -79,7 +95,7 @@
                         </table>
                     </div>
                 </div>
-                <div>
+                <div class="page-break">
                     <div class="lined-title">Szakmai ismeretek</div>
                     <div class="section-content">
                         <ul class="custom-list">
@@ -88,7 +104,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="page-break">
+                <div>
                     <div class="lined-title">Tanulmányi versenyek</div>
                     <div class="section-content">
                         <ul class="custom-list">
@@ -114,6 +130,9 @@
                                         <li>Photoshop</li>
                                         <li>Sony Vegas</li>
                                         <li>Texmaker</li>
+                                        <li>Matlab</li>
+                                        <li>LabVIEW</li>
+                                        <li>LaTeX</li>
                                     </ul>
                                 </td>
                                 <td>
