--- a/CV/index.html
+++ b/CV/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Kovács Dániel CV</title>
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="../main.css">
     </head>
     <body>
         <div class="cv-plane">
@@ -11,7 +11,7 @@
             <div class="profile-wrapper">
                 <div class="profile-inside-wrapper">
                     <div class="profile-pic-wrapper">
-                        <img src="CV/profile_pic.jpg">
+                        <img src="../profile_pic.jpg">
                     </div>
     
                     <div class="pers-props-wrapper">
@@ -200,7 +200,7 @@
             </div>
 
             <div class="signature-wrapper">
-                <img src="CV/signature.png" alt="">
+                <img src="../signature.png" alt="">
             </div>
 
         </div>
