--- a/CV/index.html
+++ b/CV/index.html
@@ -11,7 +11,7 @@
             <div class="profile-wrapper">
                 <div class="profile-inside-wrapper">
                     <div class="profile-pic-wrapper">
-                        <img src="../profile_pic.jpg">
+                        <img src="./profile_pic.jpg">
                     </div>
     
                     <div class="pers-props-wrapper">
@@ -200,7 +200,7 @@
             </div>
 
             <div class="signature-wrapper">
-                <img src="../signature.png" alt="">
+                <img src="./signature.png" alt="">
             </div>
 
         </div>
