--- a/CV/index.html
+++ b/CV/index.html
@@ -145,7 +145,7 @@
                                         <li>GLSL, Ruby, Shell scripting, Batch scripting</li>
                                     </ul>
                                     Operációs rendszerek
-                                    <ul class="custom-list" style="margin-bottom: 0;">
+                                    <ul class="custom-list">
                                         <li>Windows (7/8/10)</li>
                                         <li>Linus disztribúciók (Ubuntu/GNOME/CentOS)</li>
                                     </ul>
