--- a/feladatgyujtemeny/index.html
+++ b/feladatgyujtemeny/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Kovács Dániel CV</title>
+  <title>Feladatgyűjtemény</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link rel="stylesheet" href="../main.css">
   <link rel="stylesheet" href="fgy.css">
