--- a/feladatgyujtemeny/index.html
+++ b/feladatgyujtemeny/index.html
@@ -12,7 +12,7 @@
   <div class="cv-plane">
 
     <div id="main">
-      <h1>Feladatgyűjtemény</h1>
+      <h1><a href="../feladatgyujtemeny/" class="button">Feladatgyűjtemény</a> <a href="../prog-anyagok/" class="simple-button">Elméleti anyagok</a></h1>
       <ul class="nav-ul" id="nav-ul">
         <li><a href="#kifejezesek">Kifejezések</a></li>
         <li><a href="#vegyes">Vegyes feladatok</a></li>
