--- a/CV/index.html
+++ b/CV/index.html
@@ -69,15 +69,8 @@
                                         <li>Informatikus szak</li>
                                         <li>Szakmai tárgyak
                                             <ul class="custom-list">
-                                                <li>matematika (jeles)</li>
-                                                <li>informatika (jeles)</li>
-                                            </ul>
-                                        </li>
-                                        <li>Általános tárgyak
-                                            <ul class="custom-list">
-                                                <li>magyar</li>
-                                                <li>német</li>
-                                                <li>történelem</li>
+                                                <li>matematika</li>
+                                                <li>informatika</li>
                                             </ul>
                                         </li>
                                     </ul>
@@ -158,8 +151,8 @@
                     <div class="lined-title">Tanult nyelvek</div>
                     <div class="section-content">
                         <ul class="custom-list">
-                            <li>Angol</li>
-                            <li>Német</li>
+                            <li>Angol (társalgási szint)</li>
+                            <li>Német (társalgási szint)</li>
                         </ul>
                     </div>
                 </div>
