--- a/CV/index.html
+++ b/CV/index.html
@@ -93,7 +93,7 @@
                     <div class="section-content">
                         <ul class="custom-list">
                             <li>8 hetes szakmai gyakorlat a Cadline Kft. nél</li>
-                            <li>~1 év, aktív, szoftverfejlesztői gyakornoki munka a Nokia Solutions and Networks Kft. nél</li>
+                            <li>1 év, aktív, szoftverfejlesztői gyakornoki munka a Nokia Solutions and Networks Kft. nél</li>
                         </ul>
                     </div>
                 </div>
