--- a/TRX-workout/index.html
+++ b/TRX-workout/index.html
@@ -1,6 +1,17 @@
 <html lang="en">
 
 <head>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" /> 
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+
+    <link rel="apple-touch-icon" href="./images/icon.png">
+    <meta name="apple-mobile-web-app-title" content="TRX Timer">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+
+    <link rel="shortcut icon" type="image/png" href="./images/icon.png"/>
+    <link rel="shortcut icon" type="image/png" href="./images/icon.png"/>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -9,18 +20,69 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/material-switch.css">
+
+    <script src="./js/app/NoSleep.js"></script>
 </head>
 
 <body>
+    <div class="warning-sign">
+        <div>Orient your device in landscape mode.</div>
+    </div>
+
     <div class="wrapper">
         <div class="trx-logo">TRX</div>
         <div class="page-container">
 
 
-
-
             <div class="TRX-pager" id="page3">
-                <button type="button" class="btn btn-warning" onclick="app.gotoPage(0)" style="margin-bottom: 20px;"> &lt; Home </button>
+                <button type="button" class="btn btn-warning" onclick="app.timer._resetTimerLoop(); app.gotoPage(0)" style="margin-bottom: 20px;"> &lt; Home </button>
+                <h1 style="display: inline-block;" id="workout-name">{Random Workout}</h1>
+
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm" style="position: relative; text-align: right;">
+                            <div class="timer circle" style="display: inline-block;">
+                                <div class="inner-timer">
+                                    <div style="font-size: 20vh;" id="timer">00:00</div>
+                                    <div id="act-status-text">Click to pause</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm" style="position: relative; text-align: center;">
+                            <div style="display: inline-block;">
+                                <div class="image-div">
+                                    <img src="./js/exercises/pics/1_3.jpg" id="act-exercise-pic">
+                                    <div id="next-text">Next:</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <table class="Elapsed-timer">
+                    <tr>
+                        <td>
+                            <div id="elapsed-time">{10:01}</div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div>Elapsed</div>
+                        </td>
+                    </tr>
+                </table>
+                <table class="Remaining-timer">
+                    <tr>
+                        <td>
+                            <div id="remaining-time">{10:01}</div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div>Remaining</div>
+                        </td>
+                    </tr>
+                </table>
 
             </div>
 
@@ -30,11 +92,11 @@
             <div class="TRX-pager" id="page2">
                 <button type="button" class="btn btn-warning" onclick="app.gotoPage(0)" style="margin-bottom: 20px;"> &lt; Home </button>
                 <h1 style="display: inline-block">Create Random Workout</h1>
-                <div class="container" style="max-height: 200px;">
+                <div class="container">
                     <div class="container">
                         <div class="row">
                             <div class="col-sm">
-                                <ul class="list-group d-flex p-2">
+                                <ul class="list-group d-flex p-2" id="types">
                                     <li class="list-group-item">
                                         <span class="material-switch pull-right">
                                             <input id="type0" name="type0" type="checkbox" tr-col="0" checked/>
@@ -44,49 +106,49 @@
                                     </li>
                                     <li class="list-group-item">
                                         <span class="material-switch pull-right">
-                                            <input id="type1" name="type1" type="checkbox" r-col="1" checked/>
+                                            <input id="type1" name="type1" type="checkbox" tr-col="1" checked/>
                                             <label for="type1" class="label-warning"></label>
                                         </span>
                                         <span>Back</span>
                                     </li>
                                     <li class="list-group-item">
                                         <span class="material-switch pull-right">
-                                            <input id="type2" name="type2" type="checkbox" r-col="2" />
+                                            <input id="type2" name="type2" type="checkbox" tr-col="2" />
                                             <label for="type2" class="label-warning"></label>
                                         </span>
                                         <span>Chest</span>
                                     </li>
                                     <li class="list-group-item">
                                         <span class="material-switch pull-right">
-                                            <input id="type3" name="type3" type="checkbox" r-col="3,4" />
+                                            <input id="type3" name="type3" type="checkbox" tr-col="3,4" />
                                             <label for="type3" class="label-warning"></label>
                                         </span>
                                         <span>Legs</span>
                                     </li>
                                     <li class="list-group-item">
                                         <span class="material-switch pull-right">
-                                            <input id="type4" name="type4" type="checkbox" r-col="5" />
+                                            <input id="type4" name="type4" type="checkbox" tr-col="5" />
                                             <label for="type4" class="label-warning"></label>
                                         </span>
                                         <span>Shoulders</span>
                                     </li>
                                     <li class="list-group-item">
                                         <span class="material-switch pull-right">
-                                            <input id="type5" name="type5" type="checkbox" r-col="6,7" />
+                                            <input id="type5" name="type5" type="checkbox" tr-col="6,7" />
                                             <label for="type5" class="label-warning"></label>
                                         </span>
                                         <span>Core</span>
                                     </li>
                                     <li class="list-group-item">
                                         <span class="material-switch pull-right">
-                                            <input id="type6" name="type6" type="checkbox" r-col="8,9" />
+                                            <input id="type6" name="type6" type="checkbox" tr-col="8,9" />
                                             <label for="type6" class="label-warning"></label>
                                         </span>
                                         <span>Full Body</span>
                                     </li>
                                     <li class="list-group-item">
                                         <span class="material-switch pull-right">
-                                            <input id="type7" name="type7" type="checkbox" r-col="10" />
+                                            <input id="type7" name="type7" type="checkbox" tr-col="10" />
                                             <label for="type7" class="label-warning"></label>
                                         </span>
                                         <span>Cardio</span>
@@ -94,7 +156,7 @@
                                 </ul>
                             </div>
                             <div class="col-sm">
-                                <ul class="list-group d-flex p-2">
+                                <ul class="list-group d-flex p-2" id="levels">
                                     <li class="list-group-item">Levels</li>
                                     <li class="list-group-item">
                                         <span class="material-switch pull-right">
@@ -120,19 +182,19 @@
                                 </ul>
                             </div>
                             <div class="col-sm">
-                                <ul class="list-group d-flex p-2">
+                                <ul class="list-group d-flex p-2" id="intensity">
                                     <li class="list-group-item">Intensity</li>
                                     <li class="list-group-item">
                                         <span>Low</span>
                                         <span class="material-switch pull-right">
-                                            <input id="intensity" name="intensity" type="checkbox" checked/>
-                                            <label for="intensity" class="label-warning"></label>
+                                            <input id="int" name="int" type="checkbox" tr-int="high" checked/>
+                                            <label for="int" class="label-warning"></label>
                                         </span>
                                         <span>High</span>
                                     </li>
                                 </ul>
 
-                                <button type="button" class="btn btn-warning d-flex p-2" onclick="app.gotoPage(0)" style="width: 100%; height: 59px;">
+                                <button type="button" class="btn btn-warning d-flex p-2" onclick="app.generateRandomWorkout()" style="width: 100%; height: 59px;">
                                     Generate Workout
                                 </button>
                             </div>
@@ -170,6 +232,15 @@
 </body>
 
 <script src="./js/jquery-3.3.1.min.js"></script>
-<script src="./js/app/main.js"></script>
+<script src="./js/app/Timer.js"></script>
+<script src="./js/app/Workout.js"></script>
+<script src="./js/app/TRXApp.js"></script>
+<script src="./js/app/sounds/Dinger.js"></script>
+
+<script>
+    var noSleep = new NoSleep();
+    $(window).bind('touchstart click', ()=>{noSleep.enable();});
+    $(window).trigger('click');
+</script>
 
 </html>
