--- a/TRX-workout/index.html
+++ b/TRX-workout/index.html
@@ -40,7 +40,7 @@
 
                 <div class="container">
                     <div class="row">
-                        <div class="col-sm" style="position: relative; text-align: right;">
+                        <div class="col" style="position: relative; text-align: right;">
                             <div class="timer circle" style="display: inline-block;">
                                 <div class="inner-timer">
                                     <div style="font-size: 20vh;" id="timer">00:00</div>
@@ -48,7 +48,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm" style="position: relative; text-align: center;">
+                        <div class="col" style="position: relative; text-align: center;">
                             <div style="display: inline-block;">
                                 <div class="image-div">
                                     <img src="./js/exercises/pics/1_3.jpg" id="act-exercise-pic">
@@ -95,7 +95,7 @@
                 <div class="container">
                     <div class="container">
                         <div class="row">
-                            <div class="col-sm">
+                            <div class="col">
                                 <ul class="list-group d-flex p-2" id="types">
                                     <li class="list-group-item">
                                         <span class="material-switch pull-right">
@@ -155,7 +155,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <div class="col-sm">
+                            <div class="col">
                                 <ul class="list-group d-flex p-2" id="levels">
                                     <li class="list-group-item">Levels</li>
                                     <li class="list-group-item">
@@ -181,7 +181,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <div class="col-sm">
+                            <div class="col">
                                 <ul class="list-group d-flex p-2" id="intensity">
                                     <li class="list-group-item">Intensity</li>
                                     <li class="list-group-item">
