--- a/404.html
+++ b/404.html
@@ -1,1 +1,19 @@
-<h1>404</h1>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>404</title>
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="404.css">
+    </head>
+    <body>
+        <div class="cv-plane">
+            <img class="center-object full-size travolta" src="travolta.gif" alt="travolta">
+            <div class="message-backround"></div>
+            <div class="center-object full-size message">
+                <h2>404</h2>
+                <h4>Page not found.</h4>
+            </div>
+        </div>
+    </body>
+</html>
