cv-plane to custom-container and bootstrap css added

--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="404.css">
     </head>
     <body>
-        <div class="cv-plane">
+        <div class="custom-container">
             <img class="center-object full-size travolta" src="travolta.gif" alt="travolta">
             <div class="message-backround"></div>
             <div class="center-object full-size message">
