--- a/cv/index.html
+++ b/cv/index.html
@@ -3,10 +3,11 @@
     <head>
         <title>Kovács Dániel CV</title>
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+        <link rel="stylesheet" href="../bootstrap.min.css">
         <link rel="stylesheet" href="../main.css">
     </head>
     <body>
-        <div class="cv-plane">
+        <div class="custom-container">
 
             <div class="profile-wrapper">
                 <div class="profile-inside-wrapper">
