--- a/feladatgyujtemeny/index.html
+++ b/feladatgyujtemeny/index.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-  <div class="cv-plane">
+  <div class="custom-container">
 
     <div id="main">
-      <h1><a href="../feladatgyujtemeny/" class="button">Feladatgyűjtemény</a> <a href="../prog-anyagok/" class="simple-button">Elméleti anyagok</a></h1>
+      <h1><a href="../feladatgyujtemeny/" class="button">Feladatok</a> <a href="../prog-anyagok/" class="simple-button">Elméleti anyagok</a></h1>
       <ul class="nav-ul" id="nav-ul">
         <li><a href="#kifejezesek">Kifejezések</a></li>
         <li><a href="#vegyes">Vegyes feladatok</a></li>
@@ -676,14 +676,11 @@
     </div>
 
   </div>
-
-  <a onclick="toTop()" class="button to-top-btn" style="display: none;">Vissza a tetejére!</a>
-
 </body>
 
+<a onclick="toTop()" class="button to-top-btn" style="display: none;">Vissza a tetejére!</a>
 <script>
   window.onscroll = function() {scrollFunction()};
-
   function scrollFunction() {
       if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
           document.getElementsByClassName("to-top-btn")[0].style.display = "block";
@@ -691,10 +688,12 @@
           document.getElementsByClassName("to-top-btn")[0].style.display = "none";
       }
   }
-
   function toTop() {
-      document.body.scrollTop = 0;
-      document.documentElement.scrollTop = 0;
+    window.scroll({
+      top: 0, 
+      left: 0, 
+      behavior: 'smooth'
+    });
   }
 </script>
 
