--- a/404.html
+++ b/404.html
@@ -5,6 +5,41 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <link rel="stylesheet" href="main.css">
         <link rel="stylesheet" href="404.css">
+        <style>
+            .center-object{
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            text-align: center;
+        }
+
+        .full-size{
+            height: 100vh;
+        }
+
+        .travolta{
+            filter: blur(15px);
+        }
+
+        .message-backround{
+            position: absolute;
+            top: 0;
+            left: 0;
+            background-color: white;
+            height: 100vh;
+            width: 100vw;
+            opacity: 0.3;
+        }
+
+        .message h2{
+            font-size: 5em;
+        }
+
+        .message h4{
+            font-size: 3em;
+        }
+        </style>
     </head>
     <body>
         <div class="custom-container">
