--- a/404.html
+++ b/404.html
@@ -43,7 +43,7 @@
     </head>
     <script>
         var pathArray = window.location.pathname.split('/');
-        if(pathArray.length >= 2){
+        if(pathArray.length > 2){
            window.location.replace('/' + pathArray[1] + '/');
         }
     </script>
