--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
     <head>
         <title>404</title>
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="/main.css">
         <style>
             .center-object{
             position: fixed;
@@ -48,7 +48,7 @@
     </script>
     <body>
         <div class="custom-container">
-            <img class="center-object full-size travolta" src="travolta.gif" alt="travolta">
+            <img class="center-object full-size travolta" src="/travolta.gif" alt="travolta">
             <div class="message-backround"></div>
             <div class="center-object full-size message">
                 <h2>404</h2>
