--- a/404.html
+++ b/404.html
@@ -3,41 +3,45 @@
     <head>
         <title>404</title>
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-        <link rel="stylesheet" href="/main.css">
         <style>
+            *{
+                font-family: 'Roboto', sans-serif;
+                color: rgb(50, 50, 50);
+            }
+
             .center-object{
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            text-align: center;
-        }
+                position: fixed;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                text-align: center;
+            }
 
-        .full-size{
-            height: 100vh;
-        }
+            .full-size{
+                height: 100vh;
+            }
 
-        .travolta{
-            filter: blur(15px);
-        }
+            .travolta{
+                filter: blur(15px);
+            }
 
-        .message-backround{
-            position: absolute;
-            top: 0;
-            left: 0;
-            background-color: white;
-            height: 100vh;
-            width: 100vw;
-            opacity: 0.3;
-        }
+            .message-backround{
+                position: absolute;
+                top: 0;
+                left: 0;
+                background-color: white;
+                height: 100vh;
+                width: 100vw;
+                opacity: 0.3;
+            }
 
-        .message h2{
-            font-size: 5em;
-        }
+            .message h2{
+                font-size: 5em;
+            }
 
-        .message h4{
-            font-size: 3em;
-        }
+            .message h4{
+                font-size: 3em;
+            }
         </style>
     </head>
     <script>
