main css dependecie handling

--- a/cv/index.html
+++ b/cv/index.html
@@ -4,7 +4,7 @@
         <title>Kovács Dániel CV</title>
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <link rel="stylesheet" href="../bootstrap.min.css">
-        <link rel="stylesheet" href="../main.css">
+        <link rel="stylesheet" href="./main.css">
     </head>
     <body>
         <div class="custom-container">
