--- a/feladatgyujtemeny/index.html
+++ b/feladatgyujtemeny/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Feladatgyűjtemény</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  <link rel="stylesheet" href="../main.css">
+  <link rel="stylesheet" href="./main.css">
   <link rel="stylesheet" href="fgy.css">
 </head>
 
