--- a/prog-anyagok/index.html
+++ b/prog-anyagok/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-        <link rel="stylesheet" href="../main.css">
+        <link rel="stylesheet" href="./main.css">
         <link rel="stylesheet" href="pa.css">
         <title>Prog elmélet</title>
     </head>
