--- a/anyagok/index.html
+++ b/anyagok/index.html
@@ -9,7 +9,7 @@
     <body>
         <div class="custom-container">
 
-            <h1><a href="../feladatgyujtemeny/" class="simple-button">Feladatok</a> <a href="../prog-anyagok/" class="button">Elméleti anyagok</a></h1>
+            <h1><a href="../feladatok/" class="simple-button">Feladatok</a> <a href="../anyagok/" class="button">Elméleti anyagok</a></h1>
             <ul class="custom-list">
                 <li><a href="bp1.pdf">bevezető, kifejezések</a></li>
                 <li><a href="bp2.pdf">elágazás, ciklus, specifikáció</a></li>
