--- a/feladatok/index.html
+++ b/feladatok/index.html
@@ -12,7 +12,7 @@
   <div class="custom-container">
 
     <div id="main">
-      <h1><a href="../feladatgyujtemeny/" class="button">Feladatok</a> <a href="../prog-anyagok/" class="simple-button">Elméleti anyagok</a></h1>
+      <h1><a href="../feladatok/" class="button">Feladatok</a> <a href="../anyagok/" class="simple-button">Elméleti anyagok</a></h1>
       <ul class="nav-ul" id="nav-ul">
         <li><a href="#kifejezesek">Kifejezések</a></li>
         <li><a href="#vegyes">Vegyes feladatok</a></li>
