--- a/cv/index.html
+++ b/cv/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Kovács Dániel CV</title>
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-        <link rel="stylesheet" href="../bootstrap.min.css">
+        <link rel="stylesheet" href="./bootstrap.min.css">
         <link rel="stylesheet" href="./main.css">
     </head>
     <body>
